# amplitude-python-sdk

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  build-test-pipeline.yml  package-upload-pipeline.yml  pyproject.toml  requirements.txt  tox.ini
amplitude_python/: __init__.py  client.py  routes.py
amplitude_python/models/: identify.py
amplitude_python/utils/: model_validators.py
amplitude_python/v1/: client.py  routes.py
amplitude_python/v1/models/: __init__.py  identify.py
amplitude_python/v2/models/: options.py
amplitude_python_sdk/: __init__.py
amplitude_python_sdk/common/: clients.py  exceptions.py  models.py  utils.py
amplitude_python_sdk/common/models/: __init__.py
amplitude_python_sdk/common/utils/: __init__.py  test_utils.py
amplitude_python_sdk/integration_tests/v1/: test_identify.py
amplitude_python_sdk/integration_tests/v2/clients/: conftest.py  test_chart_annotations_client.py  test_event_client.py  test_releases_client.py
amplitude_python_sdk/tests/: test_chart_annotations_client.py
amplitude_python_sdk/tests/common/: test_models.py  test_utils.py
amplitude_python_sdk/tests/v1/: test_client.py
amplitude_python_sdk/tests/v1/models/: test_identify.py
amplitude_python_sdk/tests/v2/clients/: test_chart_annotations_client.py  test_event_client.py  test_releases_client.py
amplitude_python_sdk/tests/v2/models/: test_releases.py
amplitude_python_sdk/v1/: __init__.py  client.py  routes.py
amplitude_python_sdk/v1/models/: __init__.py  identify.py
amplitude_python_sdk/v2/: ChartAnnotationsApiClient.py  __init__.py  client.py  routes.py
amplitude_python_sdk/v2/clients/: __init__.py  chart_annotations_client.py  event_client.py  http_batch_client.py  releases_client.py
amplitude_python_sdk/v2/exceptions/: event.py
amplitude_python_sdk/v2/models/: __init__.py  charts.py  event.py  options.py  releases.py
amplitude_python_sdk/v2/models/event/: __init__.py  api.py  base.py  options.py
tests/: test_amplitude_python.py
