[tool.poetry]
name = "amplitude-python-sdk"
version = "0.1.0"
description = ""
authors = ["Krishnan Chandra <krishnan.chandra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.8.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.12.1"
pylint = "^2.7.4"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
