[tool.poetry]
name = "amplitude-python-sdk"
version = "0.3.0"
description = "Client for the Amplitude HTTP V1 and V2 API (https://developers.amplitude.com/docs)."
authors = ["Krishnan Chandra <krishnan.chandra@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/researchrabbit/amplitude-python-sdk"
repository = "https://github.com/researchrabbit/amplitude-python-sdk"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.5.0"
requests = "^2.25.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.0"
pre-commit = "^3.5.0"
coverage = "^7.3.0"
tox = "^4.11.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
